service-b/deployment-service-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      run: service-b
  template:
    metadata:
      labels:
        run: service-b
    spec:
      containers:
      - name: service-b
        image: shuaibmunshi/service-b:1.0.2
