service-b/service-service-b.yml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: service-b
  type: NodePort
